--- a/app/src/main/res/menu/campa_a_menu.xml
+++ b/app/src/main/res/menu/campa_a_menu.xml
@@ -1,4 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
+    <item
+        android:id="@+id/añadir"
+        android:icon="@drawable/gato_agregar"
+        android:title="@string/campa_as"
+        android:iconTint="@color/black"
+        app:showAsAction="ifRoom|withText"/>
 </menu>
