--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,4 +8,9 @@
         <item name="colorAccent">@color/colorAccent</item>
         <item name="titleTextColor">@color/black</item>
     </style>
+    <style name="TextAppearance.AppCompat.Widget.ActionBar.Title" parent="TextAppearance.AppCompat">
+        <item name="fontFamily">@font/allan_bold</item>
+        <item name="android:textSize">30dp</item>
+    </style>
+
 </resources>
