--- a/app/src/main/res/layout/campania_list_fragment.xml
+++ b/app/src/main/res/layout/campania_list_fragment.xml
@@ -5,13 +5,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@color/campana"
+    android:background="@drawable/rectangle"
     >
 
     <TextView
         android:id="@+id/nombre_campaña"
-        android:layout_width="152dp"
-        android:layout_height="78dp"
+        android:layout_width="118dp"
+        android:layout_height="79dp"
         android:layout_marginStart="60dp"
         android:layout_marginLeft="60dp"
         android:layout_marginTop="10dp"
