--- a/app/src/main/res/menu/botiquin_campanias.xml
+++ b/app/src/main/res/menu/botiquin_campanias.xml
@@ -2,16 +2,10 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <item
-        android:id="@+id/añadir"
-        android:icon="@drawable/gato_agregar"
-        android:title="@string/campa_as"
-        android:iconTint="@color/black"
-        app:showAsAction="ifRoom|withText"/>
 
     <item
         android:id="@+id/inventario_botiquin"
-        android:icon="@drawable/botiquin"
+        android:icon="@drawable/botiquin_agregar"
         android:title="@string/campa_as"
         android:iconTint="@color/black"
         app:showAsAction="ifRoom|withText"/>
