--- a/app/src/main/res/layout/campania_list_fragment.xml
+++ b/app/src/main/res/layout/campania_list_fragment.xml
@@ -5,21 +5,23 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@drawable/rectangle"
-    >
+    android:background="#4D80DEEA"
+    android:layout_marginBottom="3dp"
+    android:layout_marginHorizontal="5dp">
 
     <TextView
         android:id="@+id/nombre_campaña"
-        android:layout_width="118dp"
-        android:layout_height="79dp"
-        android:layout_marginStart="60dp"
-        android:layout_marginLeft="60dp"
+        android:layout_width="230dp"
+        android:layout_height="51dp"
+        android:layout_marginStart="28dp"
+        android:layout_marginLeft="28dp"
         android:layout_marginTop="10dp"
         android:layout_marginBottom="10dp"
         android:fontFamily="@font/alegreya_sans_extrabold"
         android:text="@string/nombre_campa_a"
+        android:gravity="center_vertical"
         android:textColor="@color/black"
-        android:textSize="30dp"
+        android:textSize="23dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -31,11 +33,12 @@
         android:layout_height="wrap_content"
         android:fontFamily="@font/alegreya_sans_extrabold"
         android:text="12/12/30"
-        android:textSize="30dp"
+        android:textSize="20dp"
         android:textStyle="italic"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.202"
+        app:layout_constraintHorizontal_bias="0.321"
         app:layout_constraintStart_toEndOf="@+id/nombre_campaña"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.482" />
 </androidx.constraintlayout.widget.ConstraintLayout>
