--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -10,7 +10,11 @@
     </style>
     <style name="TextAppearance.AppCompat.Widget.ActionBar.Title" parent="TextAppearance.AppCompat">
         <item name="fontFamily">@font/allan_bold</item>
-        <item name="android:textSize">30dp</item>
+        <item name="android:textSize">25dp</item>
+        <item name="android:gravity">center</item>
+    </style>
+    <style name="TextAppearance.AppCompat.Widget.ActionBar.Subtitle" parent="TextAppearance.AppCompat">
+        <item name="android:textColor">@color/grey</item>
     </style>
 
 </resources>
