--- a/app/src/main/res/layout/campania_list_fragment.xml
+++ b/app/src/main/res/layout/campania_list_fragment.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="#4D80DEEA"
+    android:background="@drawable/rectangle"
     android:layout_marginBottom="3dp"
     android:layout_marginHorizontal="5dp">
 
