--- a/app/src/main/res/layout/esterilizaciones_fragment.xml
+++ b/app/src/main/res/layout/esterilizaciones_fragment.xml
@@ -29,7 +29,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recyclerView"
+        android:id="@+id/esterilizaciones_list"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="368dp"
