--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -17,4 +17,9 @@
         <item name="android:textColor">@color/grey</item>
     </style>
 
+    <style name="Widget.BottomNavigationView"
+        parent="Widget.Design.BottomNavigationView">
+        <item name="fontFamily">@font/allan_bold</item>
+        <item name="android:textSize">30dp</item>
+    </style>
 </resources>
