--- a/app/src/main/res/layout/esterilizacion_datos_fragment.xml
+++ b/app/src/main/res/layout/esterilizacion_datos_fragment.xml
@@ -25,83 +25,101 @@
         android:id="@+id/anticipo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="28dp"
-        android:layout_marginLeft="28dp"
-        android:layout_marginTop="44dp"
+        android:layout_marginStart="36dp"
+        android:layout_marginLeft="36dp"
+        android:layout_marginTop="28dp"
         android:text="Anticipo"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView4" />
+        app:layout_constraintTop_toBottomOf="@+id/faja2" />
 
     <CheckBox
         android:id="@+id/faja"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="28dp"
-        android:layout_marginLeft="28dp"
-        android:layout_marginTop="100dp"
+        android:layout_marginStart="36dp"
+        android:layout_marginLeft="36dp"
+        android:layout_marginTop="32dp"
         android:text="Faja"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView4" />
+        app:layout_constraintTop_toBottomOf="@+id/textView11" />
+
+    <CheckBox
+        android:id="@+id/faja2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="36dp"
+        android:layout_marginLeft="36dp"
+        android:layout_marginTop="24dp"
+        android:text="Costo Extra"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/faja" />
 
     <EditText
         android:id="@+id/anticipo_cantidad"
         android:layout_width="75dp"
         android:layout_height="41dp"
-        android:layout_marginStart="20dp"
-        android:layout_marginLeft="20dp"
-        android:layout_marginTop="42dp"
+        android:layout_marginTop="20dp"
         android:ems="10"
         android:hint="$"
         android:inputType="numberDecimal"
-        app:layout_constraintStart_toEndOf="@+id/anticipo"
-        app:layout_constraintTop_toBottomOf="@+id/imageView4" />
+        app:layout_constraintTop_toBottomOf="@+id/costo_extra"
+        tools:layout_editor_absoluteX="165dp" />
 
     <EditText
         android:id="@+id/costo_extra"
         android:layout_width="75dp"
         android:layout_height="41dp"
-        android:layout_marginStart="12dp"
-        android:layout_marginLeft="12dp"
-        android:layout_marginTop="64dp"
+        android:layout_marginTop="72dp"
         android:ems="10"
         android:hint="$"
         android:inputType="numberDecimal"
-        app:layout_constraintStart_toEndOf="@+id/textView3"
-        app:layout_constraintTop_toBottomOf="@+id/anticipo_cantidad" />
+        app:layout_constraintTop_toBottomOf="@+id/costo_extra2"
+        tools:layout_editor_absoluteX="165dp" />
+
+    <EditText
+        android:id="@+id/costo_extra2"
+        android:layout_width="75dp"
+        android:layout_height="41dp"
+        android:layout_marginStart="48dp"
+        android:layout_marginLeft="48dp"
+        android:layout_marginTop="28dp"
+        android:ems="10"
+        android:hint="$"
+        android:inputType="numberDecimal"
+        app:layout_constraintStart_toEndOf="@+id/textView11"
+        app:layout_constraintTop_toBottomOf="@+id/imageView4" />
 
     <TextView
         android:id="@+id/textView3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="28dp"
-        android:layout_marginLeft="28dp"
-        android:layout_marginTop="133dp"
-        android:text="Costo total"
+        android:layout_marginStart="24dp"
+        android:layout_marginLeft="24dp"
+        android:layout_marginTop="72dp"
+        android:text="Costo total:"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView7" />
+        app:layout_constraintTop_toBottomOf="@+id/anticipo" />
 
     <TextView
         android:id="@+id/costo_total"
         android:layout_width="193dp"
         android:layout_height="43dp"
-        android:layout_marginStart="12dp"
-        android:layout_marginLeft="12dp"
-        android:layout_marginTop="112dp"
-        android:text="Costo total"
+        android:layout_marginTop="52dp"
+        android:text="@string/costo_total"
         android:textSize="30dp"
-        app:layout_constraintStart_toEndOf="@+id/textView3"
-        app:layout_constraintTop_toBottomOf="@+id/costo_extra" />
+        app:layout_constraintTop_toBottomOf="@+id/anticipo_cantidad"
+        tools:layout_editor_absoluteX="109dp" />
 
     <TextView
-        android:id="@+id/textView7"
+        android:id="@+id/textView11"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="28dp"
-        android:layout_marginLeft="28dp"
-        android:layout_marginTop="28dp"
-        android:text="Costo extra"
+        android:layout_marginStart="52dp"
+        android:layout_marginLeft="52dp"
+        android:layout_marginTop="36dp"
+        android:text="Precio:"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/faja" />
+        app:layout_constraintTop_toBottomOf="@+id/imageView4" />
 
     <Button
         android:id="@+id/terminar_esterilizacion"
