--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -22,4 +22,9 @@
         <item name="fontFamily">@font/allan_bold</item>
         <item name="android:textSize">30dp</item>
     </style>
+
+    <style name="TextAppearance.AppCompat.Widget.TextView.SpinnerItem" parent="TextAppearance.AppCompat">
+        <item name="android:textColor">@color/black</item>
+        <item name="fontFamily">@font/allan_bold</item>
+    </style>
 </resources>
