--- a/app/src/main/res/layout/esterilizacion_datos_fragment.xml
+++ b/app/src/main/res/layout/esterilizacion_datos_fragment.xml
@@ -58,26 +58,30 @@
         android:id="@+id/anticipo_cantidad"
         android:layout_width="75dp"
         android:layout_height="41dp"
+        android:layout_marginStart="44dp"
+        android:layout_marginLeft="44dp"
         android:layout_marginTop="20dp"
         android:ems="10"
         android:hint="$"
         android:inputType="numberDecimal"
-        app:layout_constraintTop_toBottomOf="@+id/costo_extra"
-        tools:layout_editor_absoluteX="165dp" />
+        app:layout_constraintStart_toEndOf="@+id/anticipo"
+        app:layout_constraintTop_toBottomOf="@+id/costo_extra" />
 
     <EditText
         android:id="@+id/costo_extra"
         android:layout_width="75dp"
         android:layout_height="41dp"
+        android:layout_marginStart="23dp"
+        android:layout_marginLeft="23dp"
         android:layout_marginTop="72dp"
         android:ems="10"
         android:hint="$"
         android:inputType="numberDecimal"
-        app:layout_constraintTop_toBottomOf="@+id/costo_extra2"
-        tools:layout_editor_absoluteX="165dp" />
+        app:layout_constraintStart_toEndOf="@+id/faja2"
+        app:layout_constraintTop_toBottomOf="@+id/precio" />
 
     <EditText
-        android:id="@+id/costo_extra2"
+        android:id="@+id/precio"
         android:layout_width="75dp"
         android:layout_height="41dp"
         android:layout_marginStart="48dp"
@@ -104,11 +108,13 @@
         android:id="@+id/costo_total"
         android:layout_width="193dp"
         android:layout_height="43dp"
+        android:layout_marginStart="11dp"
+        android:layout_marginLeft="11dp"
         android:layout_marginTop="52dp"
         android:text="@string/costo_total"
         android:textSize="30dp"
-        app:layout_constraintTop_toBottomOf="@+id/anticipo_cantidad"
-        tools:layout_editor_absoluteX="109dp" />
+        app:layout_constraintStart_toEndOf="@+id/textView3"
+        app:layout_constraintTop_toBottomOf="@+id/anticipo_cantidad" />
 
     <TextView
         android:id="@+id/textView11"
@@ -135,5 +141,6 @@
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/costo_total" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
