--- a/app/src/main/res/layout/gato_fragment.xml
+++ b/app/src/main/res/layout/gato_fragment.xml
@@ -13,7 +13,6 @@
         android:layout_height="150dp"
         android:layout_marginStart="117dp"
         android:layout_marginLeft="117dp"
-        android:layout_marginTop="5dp"
         android:layout_marginEnd="118dp"
         android:layout_marginRight="118dp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -25,9 +24,8 @@
 
     <ScrollView
         android:id="@+id/scrollView2"
-        android:layout_width="414dp"
-        android:layout_height="381dp"
-        android:layout_marginTop="20dp"
+        android:layout_width="fill_parent"
+        android:layout_height="500dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.666"
         app:layout_constraintStart_toStartOf="parent"
@@ -36,7 +34,7 @@
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginStart="10dp"
+
             android:orientation="vertical">
 
             <Button
@@ -95,6 +93,7 @@
                 android:id="@+id/textView10"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
                 android:text="Procedencia:"
                 android:textColor="@color/black"
                 android:textSize="20dp"
@@ -148,6 +147,7 @@
                 android:layout_height="41dp"
                 android:layout_marginStart="10dp"
                 android:layout_marginLeft="10dp"
+                android:layout_marginTop="3dp"
                 android:ems="10"
                 android:hint="Michi"
                 android:inputType="textPersonName"
@@ -160,9 +160,10 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="10dp"
                 android:layout_marginLeft="10dp"
+                android:layout_marginTop="12dp"
                 android:orientation="horizontal"
                 app:layout_constraintStart_toEndOf="@+id/textView8"
-                tools:layout_editor_absoluteY="154dp">
+                app:layout_constraintTop_toBottomOf="@+id/mes_select">
 
                 <RadioButton
                     android:id="@+id/macho"
@@ -226,7 +227,7 @@
                 android:layout_height="20dp"
                 android:layout_marginStart="8dp"
                 android:layout_marginLeft="8dp"
-                android:layout_marginTop="12dp"
+                android:layout_marginTop="15dp"
                 app:layout_constraintStart_toEndOf="@+id/textView10"
                 app:layout_constraintTop_toBottomOf="@+id/condicion" />
 
@@ -458,15 +459,12 @@
                 android:id="@+id/responsable"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="16dp"
-                android:layout_marginLeft="16dp"
-                android:layout_marginTop="16dp"
                 android:fontFamily="@font/annie_use_your_telescope"
                 android:text="Responsable"
                 android:textColor="@color/black"
                 android:textSize="17dp"
                 android:textStyle="bold"
-                android:visibility="gone"
+                android:visibility="invisible"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/textView10" />
 
@@ -488,15 +486,5 @@
 
 
     </ScrollView>
-
-    <Button
-        android:id="@+id/siguiente"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="148dp"
-        android:layout_marginLeft="148dp"
-        android:text="Siguiente"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/scrollView2" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
