--- a/app/src/main/res/layout/dialog_campania.xml
+++ b/app/src/main/res/layout/dialog_campania.xml
@@ -49,10 +49,8 @@
 
     <DatePicker
         android:id="@+id/date_picker_campaña"
-        android:layout_width="325dp"
-        android:layout_height="392dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginLeft="16dp"
+        android:layout_width="match_parent"
+        android:layout_height="431dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView4" />
 
