--- a/app/src/main/res/layout/gato_fragment.xml
+++ b/app/src/main/res/layout/gato_fragment.xml
@@ -24,9 +24,9 @@
 
     <ScrollView
         android:id="@+id/scrollView2"
-        android:layout_width="fill_parent"
-        android:layout_height="500dp"
-        android:layout_marginTop="8dp"
+        android:layout_width="match_parent"
+        android:layout_height="400dp"
+        android:layout_marginTop="0dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -472,7 +472,6 @@
                 android:textColor="@color/black"
                 android:textSize="23dp"
                 android:textStyle="bold"
-                android:visibility="gone"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/textView10" />
 
