--- a/app/src/main/res/layout/esterilizacion_datos_fragment.xml
+++ b/app/src/main/res/layout/esterilizacion_datos_fragment.xml
@@ -9,8 +9,8 @@
 
     <ImageView
         android:id="@+id/imageView4"
-        android:layout_width="226dp"
-        android:layout_height="158dp"
+        android:layout_width="202dp"
+        android:layout_height="128dp"
         android:layout_marginStart="114dp"
         android:layout_marginLeft="114dp"
         android:layout_marginTop="16dp"
@@ -27,7 +27,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="64dp"
         android:layout_marginLeft="64dp"
-        android:layout_marginTop="32dp"
+        android:layout_marginTop="8dp"
         android:fontFamily="@font/amaranth_bold"
         android:text="Anticipo"
         android:textSize="25sp"
@@ -38,9 +38,9 @@
         android:id="@+id/faja"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="152dp"
-        android:layout_marginLeft="152dp"
-        android:layout_marginTop="24dp"
+        android:layout_marginStart="148dp"
+        android:layout_marginLeft="148dp"
+        android:layout_marginTop="20dp"
         android:fontFamily="@font/amaranth_bold"
         android:text="Faja"
         android:textSize="25sp"
@@ -53,7 +53,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="64dp"
         android:layout_marginLeft="64dp"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="12dp"
         android:fontFamily="@font/amaranth_bold"
         android:text="Costo Extra"
         android:textSize="25sp"
@@ -64,21 +64,24 @@
         android:id="@+id/costo_extra"
         android:layout_width="75dp"
         android:layout_height="41dp"
-        android:layout_marginStart="20dp"
-        android:layout_marginLeft="20dp"
-        android:layout_marginBottom="60dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginTop="57dp"
+        android:layout_marginBottom="32dp"
         android:ems="10"
         android:inputType="numberDecimal"
         app:layout_constraintBottom_toTopOf="@+id/costo_total"
-        app:layout_constraintStart_toEndOf="@+id/costo_extra_check" />
+        app:layout_constraintStart_toEndOf="@+id/costo_extra_check"
+        app:layout_constraintTop_toTopOf="@+id/anticipo_cantidad"
+        app:layout_constraintVertical_bias="0.6" />
 
     <EditText
         android:id="@+id/anticipo_cantidad"
         android:layout_width="75dp"
         android:layout_height="41dp"
-        android:layout_marginStart="40dp"
-        android:layout_marginLeft="40dp"
-        android:layout_marginTop="28dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginLeft="24dp"
+        android:layout_marginTop="8dp"
         android:ems="10"
         android:hint="$"
         android:inputType="numberDecimal"
@@ -89,9 +92,9 @@
         android:id="@+id/precio"
         android:layout_width="84dp"
         android:layout_height="44dp"
-        android:layout_marginStart="36dp"
-        android:layout_marginLeft="36dp"
-        android:layout_marginTop="28dp"
+        android:layout_marginStart="28dp"
+        android:layout_marginLeft="28dp"
+        android:layout_marginTop="4dp"
         android:ems="10"
         android:inputType="numberDecimal"
         app:layout_constraintStart_toEndOf="@+id/textView11"
@@ -101,9 +104,9 @@
         android:id="@+id/textView3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="20dp"
-        android:layout_marginLeft="20dp"
-        android:layout_marginTop="128dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginTop="64dp"
         android:fontFamily="@font/amaranth_bold"
         android:text="Costo total:"
         android:textColor="@color/black"
@@ -115,9 +118,7 @@
         android:id="@+id/costo_total"
         android:layout_width="193dp"
         android:layout_height="43dp"
-        android:layout_marginStart="12dp"
-        android:layout_marginLeft="12dp"
-        android:layout_marginTop="68dp"
+        android:layout_marginTop="12dp"
         android:textSize="30dp"
         app:layout_constraintStart_toEndOf="@+id/textView3"
         app:layout_constraintTop_toBottomOf="@+id/costo_extra_check" />
@@ -128,7 +129,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="104dp"
         android:layout_marginLeft="104dp"
-        android:layout_marginTop="36dp"
+        android:layout_marginTop="4dp"
         android:fontFamily="@font/amaranth_bold"
         android:text="Precio:"
         android:textColor="@color/black"
@@ -142,12 +143,11 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="146dp"
         android:layout_marginLeft="146dp"
-        android:layout_marginTop="44dp"
         android:layout_marginEnd="171dp"
         android:layout_marginRight="171dp"
         android:text="Terminar"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/costo_total" />
 
