--- a/app/src/main/res/layout/gato_fragment.xml
+++ b/app/src/main/res/layout/gato_fragment.xml
@@ -8,9 +8,9 @@
 
 
     <ImageView
-        android:id="@+id/imageView3"
-        android:layout_width="172dp"
-        android:layout_height="150dp"
+        android:id="@+id/gatoImagen"
+        android:layout_width="162dp"
+        android:layout_height="117dp"
         android:layout_marginStart="117dp"
         android:layout_marginLeft="117dp"
         android:layout_marginEnd="118dp"
@@ -24,18 +24,17 @@
 
     <ScrollView
         android:id="@+id/scrollView2"
-        android:layout_width="match_parent"
-        android:layout_height="400dp"
-        android:layout_marginTop="0dp"
+        android:layout_width="390dp"
+        android:layout_height="335dp"
+        android:layout_marginTop="20dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView3">
+        app:layout_constraintTop_toBottomOf="@+id/cameraButton">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginStart="15dp"
             android:orientation="vertical">
 
             <Button
@@ -59,17 +58,16 @@
                 android:textColor="@color/grey"
                 android:textStyle="bold"
                 app:layout_constraintStart_toEndOf="@+id/buscar_gato"
-                app:layout_constraintTop_toTopOf="parent">
-            </TextView>
+                app:layout_constraintTop_toTopOf="parent"></TextView>
 
 
             <TextView
                 android:id="@+id/textView12"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="64dp"
-                android:layout_marginLeft="64dp"
-                android:layout_marginTop="20dp"
+                android:layout_marginStart="16dp"
+                android:layout_marginLeft="16dp"
+                android:layout_marginTop="12dp"
                 android:text="Mes"
                 android:textColor="@color/colorPrimary"
                 android:textSize="20sp"
@@ -82,9 +80,9 @@
                 android:id="@+id/textView13"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="60dp"
-                android:layout_marginLeft="60dp"
-                android:layout_marginTop="20dp"
+                android:layout_marginStart="32dp"
+                android:layout_marginLeft="32dp"
+                android:layout_marginTop="12dp"
                 android:text="Año"
                 android:textColor="@color/colorPrimary"
                 android:textSize="20sp"
@@ -240,10 +238,10 @@
 
             <NumberPicker
                 android:id="@+id/mes_select"
-                android:layout_width="96dp"
-                android:layout_height="61dp"
-                android:layout_marginStart="30dp"
-                android:layout_marginLeft="30dp"
+                android:layout_width="65dp"
+                android:layout_height="59dp"
+                android:layout_marginStart="4dp"
+                android:layout_marginLeft="4dp"
                 android:ems="10"
                 android:solidColor="@color/withe"
                 android:textAllCaps="false"
@@ -252,10 +250,8 @@
 
             <NumberPicker
                 android:id="@+id/fecha_año_select"
-                android:layout_width="98dp"
-                android:layout_height="62dp"
-                android:layout_marginStart="8dp"
-                android:layout_marginLeft="8dp"
+                android:layout_width="65dp"
+                android:layout_height="57dp"
                 android:ems="10"
                 android:solidColor="@color/withe"
                 android:textAllCaps="false"
@@ -494,5 +490,27 @@
 
 
     </ScrollView>
+
+    <ImageButton
+        android:id="@+id/cameraButton"
+        android:layout_width="64dp"
+        android:layout_height="57dp"
+        android:layout_marginStart="128dp"
+        android:layout_marginLeft="128dp"
+        android:layout_marginTop="12dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/gatoImagen"
+        app:srcCompat="@android:drawable/ic_menu_camera" />
+
+    <ImageButton
+        android:id="@+id/galleryButton"
+        android:layout_width="64dp"
+        android:layout_height="57dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginTop="12dp"
+        app:layout_constraintStart_toEndOf="@+id/cameraButton"
+        app:layout_constraintTop_toBottomOf="@+id/gatoImagen"
+        app:srcCompat="@android:drawable/ic_menu_gallery" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
