--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,4 +13,6 @@
     <color name="campana">#6A80DEEA</color>
     <color name="capital">#AAA3A3</color>
     <color name="grey">#5B5858</color>
+    <color name="red">#9E2E31</color>
+    <color name="green">#69CF60</color>
 </resources>
