--- a/app/src/main/res/layout/esterilizacion_datos_fragment.xml
+++ b/app/src/main/res/layout/esterilizacion_datos_fragment.xml
@@ -22,28 +22,14 @@
         app:srcCompat="@drawable/gato_esterilizacion_color" />
 
     <CheckBox
-        android:id="@+id/anticipo"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="64dp"
-        android:layout_marginLeft="64dp"
-        android:layout_marginTop="8dp"
-        android:fontFamily="@font/amaranth_bold"
-        android:text="Anticipo"
-        android:textSize="25sp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/faja" />
-
-    <CheckBox
         android:id="@+id/faja"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="148dp"
-        android:layout_marginLeft="148dp"
         android:layout_marginTop="20dp"
         android:fontFamily="@font/amaranth_bold"
         android:text="Faja"
         android:textSize="25sp"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView11" />
 
@@ -53,7 +39,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="64dp"
         android:layout_marginLeft="64dp"
-        android:layout_marginTop="12dp"
+        android:layout_marginTop="28dp"
         android:fontFamily="@font/amaranth_bold"
         android:text="Costo Extra"
         android:textSize="25sp"
@@ -64,63 +50,77 @@
         android:id="@+id/costo_extra"
         android:layout_width="75dp"
         android:layout_height="41dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginLeft="16dp"
-        android:layout_marginTop="57dp"
-        android:layout_marginBottom="32dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginTop="64dp"
         android:ems="10"
         android:inputType="numberDecimal"
-        app:layout_constraintBottom_toTopOf="@+id/costo_total"
+        android:visibility="invisible"
         app:layout_constraintStart_toEndOf="@+id/costo_extra_check"
-        app:layout_constraintTop_toTopOf="@+id/anticipo_cantidad"
-        app:layout_constraintVertical_bias="0.6" />
+        app:layout_constraintTop_toTopOf="@+id/anticipo_cantidad" />
 
     <EditText
         android:id="@+id/anticipo_cantidad"
         android:layout_width="75dp"
         android:layout_height="41dp"
-        android:layout_marginStart="24dp"
-        android:layout_marginLeft="24dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginStart="36dp"
+        android:layout_marginLeft="36dp"
+        android:layout_marginTop="20dp"
         android:ems="10"
         android:hint="$"
         android:inputType="numberDecimal"
+        android:visibility="invisible"
         app:layout_constraintStart_toEndOf="@+id/anticipo"
+        app:layout_constraintTop_toBottomOf="@+id/faja" />
+
+    <CheckBox
+        android:id="@+id/anticipo"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="72dp"
+        android:layout_marginLeft="72dp"
+        android:layout_marginTop="20dp"
+        android:fontFamily="@font/amaranth_bold"
+        android:text="Anticipo"
+        android:textSize="25sp"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/faja" />
 
     <EditText
         android:id="@+id/precio"
         android:layout_width="84dp"
         android:layout_height="44dp"
-        android:layout_marginStart="28dp"
-        android:layout_marginLeft="28dp"
-        android:layout_marginTop="4dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginLeft="24dp"
+        android:layout_marginTop="12dp"
         android:ems="10"
         android:inputType="numberDecimal"
         app:layout_constraintStart_toEndOf="@+id/textView11"
         app:layout_constraintTop_toBottomOf="@+id/imageView4" />
 
     <TextView
+        android:id="@+id/costo_total"
+        android:layout_width="136dp"
+        android:layout_height="51dp"
+        android:layout_marginStart="12dp"
+        android:layout_marginLeft="12dp"
+        android:layout_marginTop="31dp"
+        android:textSize="30dp"
+        app:layout_constraintStart_toEndOf="@+id/textView3"
+        app:layout_constraintTop_toBottomOf="@+id/costo_extra_check" />
+
+    <TextView
         android:id="@+id/textView3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginLeft="16dp"
-        android:layout_marginTop="64dp"
+        android:layout_marginStart="44dp"
+        android:layout_marginLeft="44dp"
+        android:layout_marginTop="40dp"
         android:fontFamily="@font/amaranth_bold"
         android:text="Costo total:"
         android:textColor="@color/black"
         android:textSize="25sp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/anticipo" />
-
-    <TextView
-        android:id="@+id/costo_total"
-        android:layout_width="193dp"
-        android:layout_height="43dp"
-        android:layout_marginTop="12dp"
-        android:textSize="30dp"
-        app:layout_constraintStart_toEndOf="@+id/textView3"
         app:layout_constraintTop_toBottomOf="@+id/costo_extra_check" />
 
     <TextView
@@ -129,7 +129,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="104dp"
         android:layout_marginLeft="104dp"
-        android:layout_marginTop="4dp"
+        android:layout_marginTop="12dp"
         android:fontFamily="@font/amaranth_bold"
         android:text="Precio:"
         android:textColor="@color/black"
@@ -141,15 +141,26 @@
         android:id="@+id/terminar_esterilizacion"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="146dp"
-        android:layout_marginLeft="146dp"
-        android:layout_marginEnd="171dp"
-        android:layout_marginRight="171dp"
+        android:layout_marginTop="5dp"
         android:text="Terminar"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/costo_total" />
+        app:layout_constraintTop_toBottomOf="@+id/pagado" />
+
+    <Button
+        android:id="@+id/pagado"
+        android:layout_width="200dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:backgroundTint="@color/red"
+        android:fontFamily="@font/amaranth_bold"
+        android:text="PAGADO"
+        android:textSize="25dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView3" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
