--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -15,4 +15,5 @@
     <color name="grey">#5B5858</color>
     <color name="red">#9E2E31</color>
     <color name="green">#69CF60</color>
+    <color name="material">#ACE1DC</color>
 </resources>
