--- a/app/src/main/res/layout/material_fragment.xml
+++ b/app/src/main/res/layout/material_fragment.xml
@@ -32,7 +32,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="24dp"
-            android:text="Categoría:"
+            android:text="@string/categor_a"
             android:textColor="@color/black"
             android:textSize="25dp"
             android:textStyle="bold"
@@ -44,7 +44,7 @@
             android:id="@+id/textView6"
             android:layout_width="94dp"
             android:layout_height="35dp"
-            android:text="Nombre:"
+            android:text="@string/nombre"
             android:textColor="@color/black"
             android:textSize="25dp"
             android:textStyle="bold"
@@ -57,7 +57,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="24dp"
-            android:text="Cantidad:"
+            android:text="@string/cantidad"
             android:textColor="@color/black"
             android:textSize="25dp"
             android:textStyle="bold"
@@ -70,7 +70,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="24dp"
-            android:text="Presentacion:"
+            android:text="@string/presentacion"
             android:textColor="@color/black"
             android:textSize="25dp"
             android:textStyle="bold"
@@ -129,7 +129,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="40dp"
-            android:text="Guardar"
+
+            android:text="@string/guardar"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/categoria">
