--- a/app/src/main/res/menu/esterilizaciones_menu.xml
+++ b/app/src/main/res/menu/esterilizaciones_menu.xml
@@ -8,9 +8,16 @@
         android:iconTint="@color/black"
         app:showAsAction="ifRoom|withText"/>
     <item
+        android:id="@+id/inventario"
+        android:icon="@drawable/medicina"
+        android:title="@string/botiquin"
+        android:iconTint="@color/black"
+        app:showAsAction="ifRoom|withText"/>
+
+    <item
         android:id="@+id/borrar_campaña"
         android:icon="@android:drawable/ic_menu_delete"
-        android:title="@string/editar_campa_a"
+        android:title="@string/borrar_campa_a"
         android:iconTint="@color/black"
         app:showAsAction="ifRoom|withText"/>
     <item
