--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -16,4 +16,5 @@
     <color name="red">#9E2E31</color>
     <color name="green">#69CF60</color>
     <color name="material">#ACE1DC</color>
+    <color name="pink">#F48FB1</color>
 </resources>
